# pyLemma

./: LICENSE  Notes.txt  README.md  inference.py  line.py  main.py  operator.py  parsers.py  printers.py  printers2.py  proof.py  pyproject.toml  requirements_dev.txt  sentence.py  sentence2.py  setup.cfg  setup.py  tox.ini  util.py
Database_MySQL/: mysql_initialize.py
Examples/: DeMorgans And Not.txt  DeMorgans Not Or.txt  Equals is Commutative.prf  Excluded Middle parens.prf  Excluded Middle.prf  FOL - test.txt  FOL Handout 1.prf  Fitch Rules.inf  Handout 1 - Natural.prf  Handout 1.prf  Handout 1.txt  KS1 from F.txt  KS1 test.txt  Math.prf  Peano Axioms.axm  Peano Test.prf  Propositional Logic Proofs 1.prf  Werewolf.prf  iff A A.txt  test proof2.prf  test proof3.prf
Examples/Axioms/: DefNums.axm  Peano Axioms.axm  Set Axioms.axm
Examples/F Lemmas/: Contra Lemma.prf  DeMorgan's.prf  DeMorgans And Not.prf  DeMorgans Not And.prf  DeMorgans Not Or.prf  DeMorgans Or Not.prf  Disjunctive Syllogism.prf  Excluded Middle.prf  Hypothetical Syllogism.prf  Modus Tollens Iff.prf  Modus Tollens.prf  com eq.prf  iff A A.prf
Examples/FO Logic/: Equals Elim Test.prf  Equals is Commutative.prf  FOL Handout 1.prf
Examples/KS Logic/: Handout 1 - KS.prf  KS1 test.prf  KS1 test.txt  MT.prf
Examples/Lemma Test Cases/: Excluded Middle parens.prf  Excluded Middle.lem  Not Sound.prf  Peano Test.prf  include test.txt  include test2.txt  test proof.prf
Examples/Math/: Addition is Commutative.prf  Everything Divides 0.prf  (+15 more)
Utilities/: view output.bat
tests/: test_examples.py
(+20 files in other folders)
