[metadata]
name = pyLemma
description = Tools to support formal proof creation and education.
author = Ethan Gertler
license = MIT
licence_file = LICENCE
[options]
packages =
    pyLemma
python_requires = >=3.10
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.2
    pytest-cov>=3.0
    mypy>=0.910
    flake8>=4.0
    tox>=3.24

[options.package_data]
pyLemma = py.typed

[flake8]
max-line-length = 88
extend-ignore = E203

